pull sidepanel durin animation to top; fix wrap container position

--- a/public/css/evan.css
+++ b/public/css/evan.css
@@ -1,5 +1,6 @@
 .sidebar {
   width: 17rem;
+  z-index: 10;
 }
 
 .sidebar-toggle {
